# FOCL

./: .gitignore  README.md  app.py  demo.py  evaluate_objectives.py  generate_mechanism_doc.py  prove_objectives.py  requirements.txt  run_all.py  run_paper_experiments.py  run_pneumonia.py  run_with_real_data.py  test_loader.py  test_pneumonia.py  train_local_nodes.py
blockchain/: __init__.py  chain.py  crypto.py  transaction.py
core/: __init__.py  data_utils.py  flobc_engine.py  flobc_pneumonia_engine.py  pneumonia_loader.py  real_data_loader.py
dashboard/: client.html  plot_pneumonia.py  plot_results.py
exonum_pocl/: run_all.py  run_experiments.py
exonum_pocl/blockchain/: __init__.py  chain.py  crypto.py  transaction.py
exonum_pocl/consensus/: pbft.py  pocl_pbft.py
exonum_pocl/dashboard/: plot_results.py
exonum_pocl/fl/: __init__.py  cnn_model.py  data_loader.py  engine.py  hyper_search.py  pocl_protocol.py  roles.py  sync_strategies.py
exonum_pocl/ipfs/: __init__.py  ipfs_node.py
experiments/: run_experiments.py
network/: __init__.py  http_engine.py  run_network.py  trainer_client.py  validator_node.py  wire_api.py
rust_blockchain/: Cargo.toml  build.bat
rust_blockchain/src/: block.rs  chain.rs  consensus.rs  main.rs
templates/: index.html
